--- a/config.org
+++ b/config.org
@@ -1206,6 +1206,9 @@ Sometimes the emoji is used over the actual character when we really want the ac
 * Applications
 
 ** Mail
+:PROPERTIES:
+:header-args: (if not((executable-find "mu")) "tangle": no)
+:END:
 *** Fetching
 **** Rebuild mail index whilst using mu4e
 
@@ -1922,6 +1925,29 @@ We can also use this a signature,
 (setq message-signature mu4e-from-name)
 #+end_src
 
+**** some visual improvements
+
+just makes the icons slightly better for unicode fonts
+#+begin_src emacs-lisp
+  (cl-flet* ((make-help-button (text help-echo)
+                               (with-temp-buffer
+                                 (insert-text-button text
+                                                     'help-echo help-echo
+                                                     'mouse-face nil)
+                                 (buffer-string)))
+             (make-help-button-cons (text1 text2 help-echo)
+                                    (cons (make-help-button text1 help-echo)
+                                          (make-help-button text2 help-echo))))
+    (setq mu4e-headers-threaded-label
+          (make-help-button-cons "T" (concat " " (all-the-icons-octicon "git-branch" :v-adjust 0.05))
+                                 "Thread view")
+          mu4e-headers-related-label
+          (make-help-button-cons "R" (concat " " (all-the-icons-material "link" :v-adjust -0.1))
+                                 "Showing related emails")
+          mu4e-headers-full-label
+          (make-help-button-cons "F" (concat " " (all-the-icons-material "disc_full"))
+                                 "Search is full!")))
+#+end_src
 
 * Languages
 
@@ -1945,25 +1971,6 @@ We can also use this a signature,
 ;; (setq lsp-idle-delay 0.500)
 ;; (setq shell-file-name "bash")
 ;; (setq shell-command-switch "-ic")
-  (cl-flet* ((make-help-button (text help-echo)
-                               (with-temp-buffer
-                                 (insert-text-button text
-                                                     'help-echo help-echo
-                                                     'mouse-face nil)
-                                 (buffer-string)))
-             (make-help-button-cons (text1 text2 help-echo)
-                                    (cons (make-help-button text1 help-echo)
-                                          (make-help-button text2 help-echo))))
-    (setq mu4e-headers-threaded-label
-          (make-help-button-cons "T" (concat " " (all-the-icons-octicon "git-branch" :v-adjust 0.05))
-                                 "Thread view")
-          mu4e-headers-related-label
-          (make-help-button-cons "R" (concat " " (all-the-icons-material "link" :v-adjust -0.1))
-                                 "Showing related emails")
-          mu4e-headers-full-label
-          (make-help-button-cons "F" (concat " " (all-the-icons-material "disc_full"))
-                                 "Search is full!")))
-
 
 
 #+end_src
@@ -1980,7 +1987,7 @@ We can also use this a signature,
 (package! impatient-mode)
 (package! ox-gfm)
 (package! ztree)
-(unpin! mu4e)
+;; (unpin! mu4e)
 
 ;; To install SOME-PACKAGE from MELPA, ELPA or emacsmirror:
 ;(package! some-package)
